fieldx/tests/uncompilable/1.78+sync,async-tokio/misplaced_subargs.stderr
error: get subargument 'doc' is not supported at struct level
 --> tests/uncompilable/misplaced_subargs.rs
  |
  | #[fxstruct(get(doc("not here")))]
  |                ^^^

error: builder subargument 'post_build' is not supported at field level
 --> tests/uncompilable/misplaced_subargs.rs
  |
  |     #[fieldx(builder(post_build))]
  |                      ^^^^^^^^^^
